CUI-7388 correcting divider alignment

--- a/coral-component-clock/src/styles/index.styl
+++ b/coral-component-clock/src/styles/index.styl
@@ -37,6 +37,7 @@
   text-align: center;
   width: 16px;
   vertical-align: middle;
+  padding-top: 16px;
 }
 
 ._coral-Clock ._coral-Clock-period {
